[tool.poetry]
name = "dotmanca"
version = "4.0.0"
description = "The Official Dotman Website"
authors = ["Evan Porter"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "dotmanca", from = "src"},
    {include = "characters", from = "src"},
    {include = "comics", from = "src"},
    {include = "config", from = "src"},
    {include = "gallery", from = "src"},
    {include = "main", from = "src"},
    {include = "news", from = "src"},
    {include = "places", from = "src"},
    {include = "poetry_scripts.py", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"
pillow = "^10.2"
django-environ = "^0.11.2"
markdown = "^3.5"
django-markup = "^1.8"
gunicorn = "^21.2"
argon2-cffi = "^23.1"
psycopg2-binary = "2.9.9"
bleach = "^6.1.0"
bleach-allowlist = "^1.0.3"
boto3 = "^1.34.54"
django-storages = "^1.14"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.0"
pytest-django = "^4.8.0"
pytest-env = "^1.1.3"
coverage = "^7.4.3"
django-coverage-plugin = "^3.1.0"

[tool.poetry.scripts]
server = "poetry_scripts:run_server"
manage = "poetry_scripts:manage"
lint = "poetry_scripts:run_lint"
check-format = "poetry_scripts:run_check_format"
format = "poetry_scripts:run_auto_format"
test = "poetry_scripts:run_tests"
coverage = "poetry_scripts:run_coverage"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
DJANGO_SETTINGS_MODULE = "config.settings.test"

[tool.coverage.run]
include = ["src/*"]
omit = ["*migrations*", "*tests*"]
plugins = ["django_coverage_plugin"]

[tool.black]
target-version = ["py311"]
exclude = """
/(
    .git
  | docs
  | migrations
  | htmlcov
  | .pytest_cache
)/
"""

[tool.isort]
profile = "black"
skip_glob = ["docs/*", "*/migrations/*"]

[tool.ruff]
exclude = [
    ".git",
    "*/migrations/*",
    "*/settings/*",
    "*/static/CACHE/*",
    "docs",
    "node_modules",
]
ignore = []
line-length = 120
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"