[project]
name = "dotmanca"
version = "4.0.0"
description = "The Official Dotman Website"
authors = [{ name = "Evan Porter" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "Django~=5.2",
    "pillow~=12.0",
    "django-environ>=0.12.0,<0.13",
    "markdown~=3.9",
    "django-markup~=1.10",
    "gunicorn~=23.0",
    "argon2-cffi~=25.1",
    "psycopg2-binary==2.9.11",
    "bleach>=6.2.0,<7",
    "bleach-allowlist>=1.0.3,<2",
    "boto3>=1.40.59,<2",
    "django-storages~=1.14",
]

[dependency-groups]
dev = ["django-debug-toolbar>=6.0.0,<7"]
lint = ["ruff>=0.14.2,<0.15"]
test = [
    "pytest>=8.4.2,<9",
    "pytest-django>=4.11.1,<5",
    "pytest-env>=1.2.0,<2",
    "coverage>=7.11.0,<8",
    "django-coverage-plugin>=3.2.0,<4",
]

[tool.uv]
default-groups = [
    "dev",
    "lint",
    "test",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/dotmanca",
    "src/characters",
    "src/comics",
    "src/config",
    "src/gallery",
    "src/main",
    "src/news",
    "src/places",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/dotmanca",
    "src/characters",
    "src/comics",
    "src/config",
    "src/gallery",
    "src/main",
    "src/news",
    "src/places",
]

[tool.hatch.build.targets.wheel.sources]
"src/dotmanca" = "dotmanca"
"src/characters" = "characters"
"src/comics" = "comics"
"src/config" = "config"
"src/gallery" = "gallery"
"src/main" = "main"
"src/news" = "news"
"src/places" = "places"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
DJANGO_SETTINGS_MODULE = "config.settings.test"

[tool.coverage.run]
include = ["src/*"]
omit = ["*migrations*", "*tests*"]
plugins = ["django_coverage_plugin"]

[tool.black]
target-version = ["py311"]
exclude = """
/(
    .git
  | docs
  | migrations
  | htmlcov
  | .pytest_cache
  | .venv
)/
"""

[tool.isort]
profile = "black"
skip_glob = ["docs/*", "*/migrations/*"]

[tool.ruff]
exclude = [
    ".git",
    "*/migrations/*",
    "*/settings/*",
    "*/static/CACHE/*",
    "docs",
]
line-length = 120

[tool.ruff.lint]
ignore = []
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
]
